# crewai_projects

flow_understanding/: README.md  poem.txt  pyproject.toml
flow_understanding/output/: database optimization_20260202_161213.txt
flow_understanding/src/flow_understanding/: main.py
flow_understanding/src/flow_understanding/crews/summary_crew/: summary_crew.py
flow_understanding/src/flow_understanding/crews/summary_crew/config/: agents.yaml  tasks.yaml
item_classification/: README.md  code.py  pyproject.toml
item_classification/knowledge/: type_mapping.json
item_classification/src/item_classification/: crew.py  main.py  test_crew.py
item_classification/src/item_classification/config/: agents.yaml  tasks.yaml
item_classification_agent/: README.md  pyproject.toml
item_classification_agent/src/item_classification_agent/: main.py
item_classification_agent/src/item_classification_agent/config/: agents.yaml
jira_tool/: .gitignore  README.md  jira.py  pyproject.toml
jira_tool/output/SCRUM-14/: Java.txt  PromoCode_Validation_Score_Complete.txt  SCRUM-14_details.json
jira_tool/output/SCRUM-15/: SCRUM-15_details.json
jira_tool/src/jira_tool/: crew.py  main.py  test.py
jira_tool/src/jira_tool/config/: agents.yaml  tasks.yaml
jira_tool/src/jira_tool/tools/: jira_tool.py
