[project]
name = "flow_understanding"
version = "0.1.0"
description = "flow_understanding using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,tools]==1.8.1",
]

[project.scripts]
kickoff = "flow_understanding.main:kickoff"
run_crew = "flow_understanding.main:kickoff"
plot = "flow_understanding.main:plot"
run_with_trigger = "flow_understanding.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
