[project]
name = "item_classification_agent"
version = "0.1.0"
description = "item_classification_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,tools]==1.8.1",
]

[project.scripts]
item_classification_agent = "item_classification_agent.main:run"
run_crew = "item_classification_agent.main:run"
train = "item_classification_agent.main:train"
replay = "item_classification_agent.main:replay"
test = "item_classification_agent.main:test"
run_with_trigger = "item_classification_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
