[project]
name = "jira_tool"
version = "0.1.0"
description = "jira_tool using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.8.1",
    "crewai[azure-ai-inference,tools]==1.8.1",
    "jira>=3.10.5",
]

[project.scripts]
jira_tool = "jira_tool.main:run"
run_crew = "jira_tool.main:run"
train = "jira_tool.main:train"
replay = "jira_tool.main:replay"
test = "jira_tool.test:test"
run_with_trigger = "jira_tool.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
